# libXfixes

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  configure.ac  xfixes.pc.in
include/X11/extensions/: Xfixes.h
man/: Makefile.am  Xfixes.man
src/: .gitignore  Cursor.c  Makefile.am  Region.c  SaveSet.c  Selection.c  Xfixes.c  Xfixesint.h
